syntax = "proto3";

option java_package = "org.cobweb.transport.message";
option java_outer_classname = "ServiceProtocol";
option java_generic_services = true;

import "google/protobuf/any.proto";

message Condition {
  string column = 1;
  string value = 2;
}

message DimAggRequest {
  repeated string dims = 1;
  repeated string metrics = 2;
  repeated Condition conds = 3;
  repeated string orders = 4;
  bool asc = 5;
  uint32 page = 6;
  uint32 page_size = 7;
  uint32 dt = 8;
}

message DimAggResponse {
  repeated Column columns = 1;
}

message Column {
  string name = 1;
  repeated string values = 2;
}

message DimAggCountRequest {
  repeated string dims = 1;
  repeated Condition conds = 2;
  uint32 dt = 3;
}

message DimAggCountResponse {
  repeated uint32 cnt = 1;
}

message CobwebRequest {
  CobwebRequestHeader header = 1;
  google.protobuf.Any payload = 2;
}

message CobwebRequestHeader {
  string paramType = 1;
}

message CobwebResponse {
  CobwebResponseHeader header = 1;
  google.protobuf.Any payload = 2;
}

message CobwebResponseHeader {
  uint32 code = 1;
}

